Fix syllabus in static_tab_wrapper; don't wrap slides

--- a/lms/static/sass/course/_syllabus.scss
+++ b/lms/static/sass/course/_syllabus.scss
@@ -35,7 +35,7 @@ div.syllabus {
 
       padding: 5px 10px;
 
-      &.day, &.due, &.slides {
+      &.day, &.due {
         white-space: nowrap;
       }
 
